# poker-fullstack

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: hands.py
backend/app/domain/: action.py  hand.py
backend/app/repository/: connection.py  hands_repo.py
backend/app/services/: settlement.py
backend/migrations/: 0001_init.sql
backend/scripts/: migrate.sh
backend/tests/: test_hands_api.py
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActionPanel.tsx  HandHistory.tsx  PlayLog.tsx  SetupPanel.tsx
frontend/src/components/ui/: scroll-area.tsx  separator.tsx
frontend/src/lib/game/: engine.ts  types.ts
frontend/src/lib/game/__tests__/: engine.test.ts
frontend/src/store/: useGame.ts
frontend/tests/: poker.spec.ts
